helm-tests/template-tests/ingress.yaml
# Verify that Ingress can be enabled globally

### SECTION:PARAMETERS ###
# The PARAMETERS section is required.
# If the releaseName parameter is not set, then a default release name
# matching the name of the file (without the extension) will be used.
releaseName: ingress
# Set skipTest to true to make the script skip this test
skipTest: false
### SECTION:VALUES ###
global:
  ingress:
    enabled: true
pingfederate-admin:
  enabled: true
### SECTION:EXPECTED ###
# Validate that the ingress object is included in generated yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pingfederate-admin
